<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" 
    android:orientation="vertical"
    >
    
    <EditText
        android:id="@+id/ip_addr"
        android:layout_margin="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ip_addr" />
    <EditText
        android:id="@+id/port"
        android:layout_margin="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/port"/>
    
    <CheckBox 
        android:id="@+id/default_check"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/default_checkbox"/>
    
</LinearLayout>
