<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.bigh.nfcapp.util.PassBoltLoginActivity"
    android:background="@drawable/login_image2">

    <!-- Login progress -->
    <ProgressBar android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginBottom="8dp" android:visibility="gone" />

    <ScrollView android:id="@+id/login_form" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout android:id="@+id/email_login_form" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical">

            <AutoCompleteTextView android:id="@+id/username" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/prompt_username"
                android:inputType="textEmailAddress" android:maxLines="1"
                android:singleLine="true"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"/>

            <EditText android:id="@+id/password" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/prompt_pin"
                android:inputType="textPassword"
                android:maxLines="1" android:singleLine="true"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"/>

            <!--HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout android:id="@+id/cardParentLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" -->

            <EditText android:id="@+id/card_id" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/prompt_card"
                android:inputType="textPassword"
                android:maxLines="1" android:singleLine="true"
                android:editable="false"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"/>

            <!--ToggleButton
                android:id="@+id/cardDetectBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ToggleButton"
                android:textOn="Scan Card ON"
                android:textOff="Scan Card OFF"/-->

            <!--/LinearLayout>
        </HorizontalScrollView-->

            <Button android:id="@+id/email_sign_in_button" style="?android:textAppearanceSmall"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_marginTop="16dp" android:text="@string/action_sign_in"
                android:textStyle="bold"/>

            <Button android:id="@+id/clear_all" style="?android:textAppearanceSmall"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_marginTop="16dp" android:text="@string/action_clear_all"
                android:textStyle="bold"
                android:onClick="clearAll"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>

